# contract-agent

./: .gitignore  HANDOFF.md  README.md
backend/: .env.example  .gitignore  agent.py  api_clients.py  main.py  models.py  pyproject.toml
backend/data/: uoa_positions.json
backend/services/: classifier.py  comparator.py  parser.py  reporter.py  templates.py  vision_ocr.py
data/: UoA-Data Access Agreement Agency Template (incoming) May 2024 (1).docx  UoA-Data Access Agreement Template (outgoing) May 2024.docx  UoA-Data Transfer Agreement Template (outgoing) April 2024.docx  UoA-MTA_Outbound for Key Materials-April 2018.docx  UoA-Material_Transfer_Agreement_outgoing_Aug 2024.docx  UoA-Research Collaboration Agreement Template (1).docx  UoA-Research Services Agreement (Agency) _June 2024 .docx  UoA-Student Research Agreement Template (April 2018).docx  UoA-Template Subcontractor Agreement_2025 (1) (1).docx
data/Contract Reviewer Agent/: UoA-CDA Two Way Template.docx  UoA-Data Transfer Agreement Template (incoming) April 2024 .docx  UoA-Master Services Agreement Template (1).docx  UoA-Material_Transfer_Agreement incoming-Aug 2024.docx  UoA-Provision of Services Agreement (Agency)_June 2024.docx
eval/: run_augment.py  run_batch.py  run_classify.py  run_compare.py  run_eval.py  run_ingest.py  run_report.py  run_summary.py
eval/golden/: mta_example_1.json
eval/lib/: metrics.py
eval/reports/: PIPELINE_REPORT.md  mta_example_1__2026-05-07T08-39-21Z.json  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+225 files in other folders)
